# PROJECT-EIDOLON

./: .Dockerfile  .dockerignore  .env.example  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yaml  docker-usage.html  index.html  keywords.json  main.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: .gitmessage  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  data-point-request.md  feature-request.md  module-request.md
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  module-hash.yml
app/: __init__.py  config.py  main.py  scheduler.py
app/interface/: __init__.py
core/: __init__.py  utils.py
core/analysis/: __init__.py  keyword_monitor.py
core/detectors/: __init__.py  reddit_client.py  twitter_base_score.py  twitter_client.py
core/keywords/: __init__.py  keyword_service.py  manager.py
core/security/: generate_module_hashes.py
core/util/: logging.py
docker/: Dockerfile  docker-compose.yaml  full_build.Dockerfile
docs/: docker-usage.md  index.md
ingest/: __init__.py  scrape_utils.py
interface/: api.py  cli.py
modules/: 1-overview.html  2-creating-a-module.html  config.html  converting-existing-apps.html  methods.html  tests.html  verification.html
pipelines/: 1-overview.html  creating-a-pipeline.html
search/: search_index.json
security/: configuration.html  model.html  signing-modules.html  trusted-signers.html
settings/: configuration.yaml
tests/: test_keyword_monitor.py  test_keyword_monitor.py.txt  test_message_bus.py  test_modules.py  test_plugins.py  test_scheduler.py
(+145 files in other folders)
